--- a/src/app/components/http/http.component.html
+++ b/src/app/components/http/http.component.html
@@ -1,3 +1,9 @@
-<p>
-  http works!
-</p>
+<div class="card-columns">
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title that wraps to a new line</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+  </div>
+</div>
