Creación de Fromularios
- Se crean formularios en Angular
- Se consume HTTP
-

--- a/src/app/components/http/http.component.html
+++ b/src/app/components/http/http.component.html
@@ -4,4 +4,8 @@
             *ngFor="let usuario of usuarios"
             [user]="usuario"></card-usuario>
   </div>
+
+  <hr>
+  <button class="btn btn-primary" 
+          (click)="crearUsuario()">Crear Usuario</button>
 </div>
