--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -15,6 +15,10 @@
       <li class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" [routerLink]="[ '/http' ]">HTTP</a>
       </li>
+
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="[ '/forms' ]">Forms</a>
+      </li>
       
     </ul>
     <form class="form-inline my-2 my-lg-0">
