Consumo de Firebase
- Se integran los módulos de FireBase
- Se consume una base de datos de Firebase desde el proyecto

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -19,6 +19,14 @@
       <li class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" [routerLink]="[ '/forms' ]">Forms</a>
       </li>
+
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="[ '/pipes' ]">Pipes</a>
+      </li>
+
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="[ '/firebase' ]">Firebase</a>
+      </li>
       
     </ul>
     <form class="form-inline my-2 my-lg-0">
