Servicios de Eliminacion y Actualizacion culminados
Se crean las fucniones de upadte y delete del servicio de Canchas para implementarlo en los componentes

--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -28,7 +28,7 @@
     <div class="col-md-6">
       <ul class="list-group">
         <li class="list-group-item" *ngFor="let cancha of canchitas | async">
-          {{cancha.nombre}}
+          {{cancha.nombre}} {{cancha.id}} 
         </li>
       </ul>
     </div>
