Finalizacion del proyecto con localstorage y token

--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -32,5 +32,9 @@
         </li>
       </ul>
     </div>
+    <button (click)="registrar()">registrr</button>
+    <button (click)="iniciar()">iniciar</button>
+    <button (click)="iniciarCredentials()">iniciarCredentials</button>
+    
   </div>
 </div>
