--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -27,6 +27,10 @@
       <li class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" [routerLink]="[ '/firebase' ]">Firebase</a>
       </li>
+
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="[ '/login' ]">Iniciar Sesion</a>
+      </li>
       
     </ul>
     <form class="form-inline my-2 my-lg-0">
